# Discord-Bot

./: .env  .gitignore  .replit  Dockerfile  LICENSE  README.md  bot.db  pyproject.toml  requirements.txt  start.sh
.github/workflows/: cloud-run.yml  google-cloudrun-source.yml  workflow.yml
src/: ai.py  bot.py  constants.py  main.py  openai.py  params.py  secret.py
src/db/: adduser.py  appendguild.py  appenduser.py
src/ext/: color.py  giphy.py  help.py  music.py  onbotjoin.py  sentiment.py
src/ext/admin/: configure.py  logging.py  moderation.py
src/ext/ai/: chatbot-embeds.py  chatbot-new.py  chatbot.py  image.py  images.py  imagine.py  savetext.py  text.py
src/ext/extras/: help.py  music.py
src/ext/games/: coinflip.py  rpg.py  tictactoe.py  tictactoeai.py  wordle.py
src/ext/members/: join.py  leave.py
src/ext/quotes/: fortunes.py  quotes.py  zenquotes.py
src/old/: anagrams.py  count.py  rockpaperscissors.py  rolldie.py  tictactoeai.py  tictactoevs.py
